# HFT_

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  render.yaml
cpp/: CMakeLists.txt
cpp/include/: json_handler.hpp  matching_engine.hpp  order_book.hpp  types.hpp
cpp/src/: json_handler.cpp  main.cpp  matching_engine.cpp  order_book.cpp
frontend/: .env.example  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: error.tsx  fof.css  globals.css  layout.tsx  not-found.tsx  page.tsx  quant-geometry.css  site-premium.css  terminal-theme.css  ui-system.css
frontend/components/: AboutPageContent.tsx  AboutTabNav.tsx  AboutUsSlider.tsx  ActivityLog.tsx  AnimatedMottoBanner.tsx  BloombergCommandBar.tsx  BloombergFunctionBar.tsx  BloombergHelpPanel.tsx  BloombergTerminalChart.tsx  BloombergTicker.tsx  BloombergWatchlist.tsx  ChartAnalysisPanel.tsx  ChartFullscreenLink.tsx  ChartSymbolBar.tsx  CompanyFundamentalsTabs.tsx  CompanyReportPanel.tsx  ContactPageContent.tsx  ContactSection.tsx  CppEnginePanel.tsx  DataLoadingBar.tsx  DataNotFound.tsx  DemoWalkthrough.tsx  DevConsoleFilter.tsx  DocsPageContent.tsx  FofHome.tsx  (+57 more)
python/: api_server.py  crypto_ccxt_feed.py  demo_events.py  engine_client.py  google_finance_feed.py  market_data_provider.py  market_hours.py  market_simulator.py  quant_research.py  requirements-quant-optional.txt  requirements.txt  security.py  strategy.py  user_orders.py  user_portfolio.py  yahooquery_feed.py  yfinance_feed.py
scripts/: build-prod.sh  build.sh  run-prod.sh  run.sh  start-backend.sh
(+41 files in other folders)
